--- a/MignotWebSite.html
+++ b/MignotWebSite.html
@@ -139,7 +139,7 @@
         </div>
         <div data-u="slides" style="cursor: default; position: relative; top: 0px; left: 0px; width: 960px; height: 400px; overflow: hidden;">
             <div data-p="112.50" style="display: none;">
-                <a href="services/ordonannce.html"><img data-u="image" src="img/OrdonnanceEnLigne.jpg" /> </a>
+                <a href="services/ordonannce.html"><img data-u="image" src="img/OrdonnanceEnLigne2.png" /> </a>
             </div>
             <div data-p="112.50" style="display: none;">
                 <a href="services/livraison.html"><img data-u="image" src="img/LivraisonADomicile.jpg" /></a>
