--- a/equipe.html
+++ b/equipe.html
@@ -44,70 +44,113 @@
         <div class="at-section__title">L'équipe</div>
       </div>
       <div data-column='3' class="at-grid">
+<div class="at-column">
+          <div class="at-user">
+            <div class="at-user__avatar"></div>
+            <div class="at-user__name"> </div>
+            <div class="at-user__title"></div>
+          </div>
+        </div>
         <div class="at-column">
           <div class="at-user">
-            <div class="at-user__avatar"><img src="https://s3.amazonaws.com/uifaces/faces/twitter/adhamdannaway/128.jpg"/></div>
+            <div class="at-user__avatar"><img src="img/benoit.png"/></div>
             <div class="at-user__name">Benoît Mignot </div>
             <div class="at-user__title">Directeur &amp; Pharmacien</div>
           </div>
         </div>
         <div class="at-column">
           <div class="at-user">
-            <div class="at-user__avatar"><img src="https://s3.amazonaws.com/uifaces/faces/twitter/rem/128.jpg"/></div>
+            <div class="at-user__avatar"></div>
+            <div class="at-user__name"></div>
+            <div class="at-user__title"></div>
+          </div>
+        </div>
+        <div class="at-column">
+          <div class="at-user">
+            <div class="at-user__avatar"><img src="img/monique.jpg"/></div>
             <div class="at-user__name">Monique Mignot</div>
             <div class="at-user__title">Directrice &amp; Pharmacienne</div>
           </div>
         </div>
         <div class="at-column">
           <div class="at-user">
-            <div class="at-user__avatar"><img src="https://s3.amazonaws.com/uifaces/faces/twitter/boheme/128.jpg"/></div>
+            <div class="at-user__avatar"><img src="img/christophe.png"/></div>
             <div class="at-user__name">Christophe Mignot</div>
             <div class="at-user__title">Pharmacien</div>
           </div>
         </div>
         <div class="at-column">
           <div class="at-user">
-            <div class="at-user__avatar"><img src="https://s3.amazonaws.com/uifaces/faces/twitter/ok/128.jpg"/></div>
+            <div class="at-user__avatar"><img src="img/marielle.png"/></div>
             <div class="at-user__name">Marielle Thirion</div>
             <div class="at-user__title">Pharmacienne</div>
           </div>
         </div>
         <div class="at-column">
           <div class="at-user">
-            <div class="at-user__avatar"><img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg"/></div>
+            <div class="at-user__avatar"><img src="img/pierre.png"/></div>
             <div class="at-user__name">Pierre Benhaim</div>
             <div class="at-user__title">Pharmacien</div>
           </div>
         </div>
         <div class="at-column">
           <div class="at-user">
-            <div class="at-user__avatar"><img src="https://s3.amazonaws.com/uifaces/faces/twitter/marcogomes/128.jpg"/></div>
+            <div class="at-user__avatar"><img src="img/christine.jpg"/></div>
             <div class="at-user__name">Christine Tachdjian</div>
             <div class="at-user__title">Préparatrice</div>
           </div>
         </div>
         <div class="at-column">
           <div class="at-user">
-            <div class="at-user__avatar"><img src="https://s3.amazonaws.com/uifaces/faces/twitter/dancounsell/128.jpg"/></div>
+            <div class="at-user__avatar"><img src="img/jenifer.png"/></div>
             <div class="at-user__name">Jennifer Dourlens</div>
             <div class="at-user__title">Préparatrice</div>
           </div>
         </div>
         <div class="at-column">
           <div class="at-user">
-            <div class="at-user__avatar"><img src="https://s3.amazonaws.com/uifaces/faces/twitter/kolage/128.jpg"/></div>
+            <div class="at-user__avatar"><img src="img/corinne.png"/></div>
             <div class="at-user__name">Corinne Roger</div>
             <div class="at-user__title">Préparatrice</div>
           </div>
         </div>
         <div class="at-column">
           <div class="at-user">
-            <div class="at-user__avatar"><img src="https://s3.amazonaws.com/uifaces/faces/twitter/tonychester/128.jpg"/></div>
-            <div class="at-user__name">Drissia Sebaa-Pitou</div>
-            <div class="at-user__title">Préparatrice</div>
+            <div class="at-user__avatar"><img src="img/annie.png"/></div>
+            <div class="at-user__name">Annie Aillaud</div>
+            <div class="at-user__title">Collaboratrice</div>
+          </div>
+        </div>
+        <div class="at-column">
+          <div class="at-user">
+            <div class="at-user__avatar"><img src="img/christele.png"/></div>
+            <div class="at-user__name">Christèle Saez-Laurant</div>
+            <div class="at-user__title">Pharmacien</div>
+          </div>
+        </div>
+      <div class="at-column">
+          <div class="at-user">
+            <div class="at-user__avatar"><img src="img/karen.jpg"/></div>
+            <div class="at-user__name">Karen Buvaj</div>
+            <div class="at-user__title">Naturopathe</div>
+          </div>
+        </div>
+      <div class="at-column">
+          <div class="at-user">
+            <div class="at-user__avatar"><img src="img/francoise.png"/></div>
+            <div class="at-user__name">Françoise Arnaud</div>
+            <div class="at-user__title">Collaboratrice</div>
+          </div>
+        </div>
+        <div class="at-column">
+          <div class="at-user">
+            <div class="at-user__avatar"><img src="img/nicole.png"/></div>
+            <div class="at-user__name">Nicole Rodriguez</div>
+            <div class="at-user__title">Secrétaire informatique</div>
           </div>
         </div>
       </div>
+
     </div>
 
     <footer>
