--- a/services/garde.html
+++ b/services/garde.html
@@ -45,7 +45,7 @@
 	</div>
     <div class="ordonnanceinfo">
       <div class="header">
-      <p> Ce service n'est pas à disposition dans notre pharmacie tout les jours, pour en bénéficier veuillez noter les informations suivantes : </p>
+      <p> Ce service est disponible dans notre pharmacie, pour en bénéficier veuillez noter les informations suivantes : </p>
       </div>
       <div class="row-garde">
         <!-- <div class ="column-1"> -->
