--- a/services/ordonnance.html
+++ b/services/ordonnance.html
@@ -28,7 +28,7 @@
         <li>Services
           <ul class="drop">
             <div>
-            <li><a href="#">Ordonnance en ligne</a></li>
+            <li>Ordonnance en ligne</li>
             <li><a href="livraison.html">Livraison à domicile</a></li>
             <li><a href="garde.html">Service de garde</a></li>
             </div>
